[package]
name = "cargo-tokio"
version = "0.1.0"
license = "MIT"
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/cargo-tokio"

categories = ["development-tools", "development-tools::cargo-plugins"]

keywords = ["cargo", "cargo-subcommand", "tokio"]

[dependencies]
structopt = "0.3.20"
