[package]
name = "cargo-tokio"
version = "0.1.0"
license = "MIT"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
description = "Cargo Tokio CI tool"

documentation = "https://docs.rs/cargo-tokio"

categories = ["development-tools", "development-tools::cargo-plugins"]

keywords = ["cargo", "cargo-subcommand", "tokio"]

[dependencies]
structopt = "0.3.20"
